Feat: add removebookfromcart and swagger
