# app/routes/routes.js
@@ -23,4 +23,5 @@ module.exports = (app) => {
   app.get("/carts", middleware.validateToken, cartController.getAllCarts);
   app.get("/cart/:userId", middleware.validateToken, cartController.getCart);
   app.put("/placeOrder/:cartId", middleware.validateToken, cartController.placeOrder);
+  app.delete("/removeBookFromCart/:id", middleware.validateToken, cartController.removeBookFromCart);
 };
